@@ -19,6 +19,7 @@ Cacti CHANGELOG
 -bug: Logarithmic Scaling and units-si dependencies fixed (thanks to ke6oms)
 -bug: allow empty [upper|lower]_limit even without autoscaling
 -bug: correct grep'ing of icmp[s|r]eq required for newer linux versions (e.g. Fedora 14)
+-bug: when changing a data template, "suggested name" title of data sources are unconditionally overwritten
 -feature#0000475: Add RRDTool options currently not settable within Cacti
 -feature#0000726: add VDEF support
 -feature#0000954: implement --alt-y-grid graph option
